JNG-4084: adjust spring archetype