@@ -11,18 +11,15 @@
         <version>2.7.3</version>
         <relativePath/>
     </parent>
-
     <groupId>${groupId}</groupId>
     <artifactId>${artifactId}</artifactId>
     <version>${version}</version>
-
     <properties>
         <java.version>11</java.version>
-        <judo.version>${jslSpringbootVersion}</judo.version>
-        <judo-tatami-jsl.version>1.1.3.20221107_125804_ddf665e4_develop</judo-tatami-jsl.version>
+        <judo-maven-plugin.version>1.1.3.20221107_125804_ddf665e4_develop</judo-maven-plugin.version>
+        <judo-spring-boot-starter.version>${jslSpringbootVersion}</judo-spring-boot-starter.version>
         <judo-model-name>${modelName}</judo-model-name>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -36,7 +33,7 @@
         <dependency>
             <groupId>hu.blackbelt.judo</groupId>
             <artifactId>judo-spring-boot-starter</artifactId>
-            <version>${judo.version}</version>
+            <version>${judo-spring-boot-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -65,28 +62,27 @@
             <plugin>
                 <groupId>hu.blackbelt.judo.tatami</groupId>
                 <artifactId>judo-tatami-jsl-workflow-maven-plugin</artifactId>
-                <version>${judo-tatami-jsl.version}</version>
+                <version>${judo-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>generate-models</id>
+                        <phase>generate-sources</phase>
                         <goals>
                             <goal>parser-workflow</goal>
                         </goals>
-                        <phase>generate-sources</phase>
                     </execution>
                 </executions>
                 <configuration>
+                    <sources>${basedir}/src/main/resources/model</sources>
                     <dialects>hsqldb,postgresql</dialects>
                     <generateSdkSpring>true</generateSdkSpring>
-                    <sdkPackagePrefix>${project.groupId}.${judo-model-name}</sdkPackagePrefix>
-                    <sources>${basedir}/src/main/resources/model</sources>
+                    <sdkPackagePrefix>${project.groupId}.${project.artifactId}</sdkPackagePrefix>
                     <destination>${basedir}/target/generated-sources/model</destination>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>add-source</id>
@@ -116,6 +112,15 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.time=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
